Update URLs to CI/GIT/Project

--- a/website/src/overview.html
+++ b/website/src/overview.html
@@ -60,7 +60,7 @@ layout: main.hbs
         <div class="card">
             <div class="card-header">
                 <div class="card-title">
-                    <a href="https://jira.redbackup.org">🗃 Task List</a>
+                    <a href="https://project.redbackup.org">🗃 Task List</a>
                 </div>
             </div>
             <div class="card-body">
@@ -85,7 +85,7 @@ layout: main.hbs
         <div class="card">
             <div class="card-header">
                 <div class="card-title">
-                    <a href="https://bitbucket.redbackup.org">📓 Code Repository</a>
+                    <a href="https://git.redbackup.org">📓 Code Repository</a>
                 </div>
             </div>
             <div class="card-body">
@@ -97,7 +97,7 @@ layout: main.hbs
         <div class="card">
             <div class="card-header">
                 <div class="card-title">
-                    <a href="https://bamboo.redbackup.org">🔄 Continuous Integration</a>
+                    <a href="https://ci.redbackup.org">🔄 Continuous Integration</a>
                 </div>
             </div>
             <div class="card-body">
