--- a/website/src/overview.html
+++ b/website/src/overview.html
@@ -29,7 +29,7 @@ layout: main.hbs
                 <div class="card-title"><a href="../problem-statement.pdf">❓ Problem Statement</a></div>
             </div>
             <div class="card-body">
-                <i>tood: write a mini-abstract</i>
+                Initial project statement and task description
             </div>
         </div>
     </div>
@@ -39,8 +39,8 @@ layout: main.hbs
                 <div class="card-title"><a href="../project-plan.pdf" >🛣️ Project Plan</a></div>
             </div>
             <div class="card-body">
-                <i>tood: write a mini-abstract</i>
-            </div>
+                organisation, schedule, iterations, milestones, risks analysis, risk management, infrastructure, quality measures, definition of done
+	    </div>
         </div>
     </div>
     <div class="column col-6 col-md-12">
@@ -51,8 +51,8 @@ layout: main.hbs
                 </div>
             </div>
             <div class="card-body">
-                <i>tood: write a mini-abstract</i>
-            </div>
+            	report, theoretical concept, testing concept, implementation, discussion, outlook
+	    </div>
         </div>
     </div>
 
@@ -64,8 +64,8 @@ layout: main.hbs
                 </div>
             </div>
             <div class="card-body">
-                <i>tood: write a mini-abstract</i>
-            </div>
+            	JIRA issue tracker, time tracking (Redmine alternative)
+	    </div>
         </div>
     </div>
 
@@ -89,8 +89,8 @@ layout: main.hbs
                 </div>
             </div>
             <div class="card-body">
-                <i>tood: write a mini-abstract</i>
-            </div>
+            	source code, reviews, pull requests
+	    </div>
         </div>
     </div>
     <div class="column col-6 col-md-12">
@@ -101,8 +101,8 @@ layout: main.hbs
                 </div>
             </div>
             <div class="card-body">
-                <i>tood: write a mini-abstract</i>
-            </div>
+            	CI with Bamboo, automatic deployment, generate website and latex documents 
+	    </div>
         </div>
     </div>
     <div class="column col-6 col-md-12">
