--- a/website/src/overview.html
+++ b/website/src/overview.html
@@ -60,7 +60,7 @@ layout: main.hbs
         <div class="card">
             <div class="card-header">
                 <div class="card-title">
-                    <a href="https://project.redbackup.org">🗃 Task List</a>
+                    <a href="https://project.redbackup.org/projects/REDPRO/issues/">🗃 Task List</a>
                 </div>
             </div>
             <div class="card-body">
@@ -73,7 +73,7 @@ layout: main.hbs
         <div class="card">
             <div class="card-header">
                 <div class="card-title">
-                    🤝 Meeting Agendas and Minutes
+                   🕒 Meeting Agendas and Minutes
                 </div>
             </div>
             <ul>
@@ -85,7 +85,7 @@ layout: main.hbs
         <div class="card">
             <div class="card-header">
                 <div class="card-title">
-                    <a href="https://git.redbackup.org">📓 Code Repository</a>
+                    <a href="https://git.redbackup.org/projects/RED">📓 Code Repository</a>
                 </div>
             </div>
             <div class="card-body">
@@ -97,7 +97,7 @@ layout: main.hbs
         <div class="card">
             <div class="card-header">
                 <div class="card-title">
-                    <a href="https://ci.redbackup.org">🔄 Continuous Integration</a>
+                    <a href="https://ci.redbackup.org/browse/RED">🔄 Continuous Integration</a>
                 </div>
             </div>
             <div class="card-body">
@@ -109,7 +109,7 @@ layout: main.hbs
         <div class="card">
             <div class="card-header">
                 <div class="card-title">
-                    🕺 Presentations
+                    💬 Presentations
                 </div>
             </div>
             <ul>
