--- a/website/src/overview.html
+++ b/website/src/overview.html
@@ -77,6 +77,8 @@ layout: main.hbs
                 </div>
             </div>
             <ul>
+		<li><a href="../meetings/2017-09-18-kickoff/">18.09.2017 - Project Kickoff</a></li>
+		<li><a href="../meetings/2017-09-22-kickoff/">22.09.2017 - Kickoff with MeF</a></li>
                 <li><i><a href="../meetings/_template-meeting-minutes/">Template</a></i></li>
             </ul>
         </div>
