Add parentesis to overview time tracking

--- a/website/src/overview.html
+++ b/website/src/overview.html
@@ -64,7 +64,7 @@ layout: main.hbs
                 </div>
             </div>
             <div class="card-body">
-                JIRA issue tracker, <a href="https://project.redbackup.org/issues/?filter=10202">project progress</a>, time tracking (<a href="https://project.redbackup.org/secure/TempoTeamBoard!timesheet.jspa?team=2&use-ISO8061-week-numbers=false&period=&periodType=FLEX&periodView=DATES&from=2017-09-17&to=2017-10-17&exact=&span=31">per person</a>, <a href="https://project.redbackup.org/secure/TempoProjectBoard!report.jspa?v=1&periodType=FLEX&periodView=DATES&from=2017-09-17&to=2017-10-17&projectFilter=project&project=10104">per issue</a>
+                JIRA issue tracker, <a href="https://project.redbackup.org/issues/?filter=10202">project progress</a>, time tracking (<a href="https://project.redbackup.org/secure/TempoTeamBoard!timesheet.jspa?team=2&use-ISO8061-week-numbers=false&period=&periodType=FLEX&periodView=DATES&from=2017-09-17&to=2017-10-17&exact=&span=31">per person</a>,&nbsp;<a href="https://project.redbackup.org/secure/TempoProjectBoard!report.jspa?v=1&periodType=FLEX&periodView=DATES&from=2017-09-17&to=2017-10-17&projectFilter=project&project=10104">per issue</a>)
 	    </div>
         </div>
     </div>
