Add meeting minutes for weekly meeting

--- a/website/src/overview.html
+++ b/website/src/overview.html
@@ -79,7 +79,8 @@ layout: main.hbs
             <ul>
 		<li><a href="../meetings/2017-09-18-kickoff/">18.09.2017 - Project Kickoff</a></li>
 		<li><a href="../meetings/2017-09-22-kickoff/">22.09.2017 - Kickoff with MeF</a></li>
-		<li><a href="../meetings/2017-09-26-weekly-meeting/">22.09.2017 - Weekly Supervision Meeting</a></li>
+		<li><a href="../meetings/2017-09-29-weekly-meeting/">29.09.2017 - Advisor Meeting Week 2</a></li>
+		<li><a href="../meetings/2017-10-10-weekly-meeting/">10.10.2017 - Advisor Meeting Week 4</a></li>
                 <li><i><a href="../meetings/_template-meeting-minutes/">Template</a></i></li>
             </ul>
         </div>
