--- a/website/src/overview.html
+++ b/website/src/overview.html
@@ -81,6 +81,7 @@ layout: main.hbs
 		<li><a href="../meetings/2017-09-22-kickoff/">22.09.2017 - Kickoff with MeF</a></li>
 		<li><a href="../meetings/2017-09-29-weekly-meeting/">29.09.2017 - Advisor Meeting Week 2</a></li>
 		<li><a href="../meetings/2017-10-10-weekly-meeting/">10.10.2017 - Advisor Meeting Week 4</a></li>
+		<li><a href="../meetings/2017-10-20-weekly-meeting/">20.10.2017 - Advisor Meeting Week 5</a></li>
                 <li><i><a href="../meetings/_template-meeting-minutes/">Template</a></i></li>
             </ul>
         </div>
