Meeting Minutes Meeting W10

--- a/website/src/overview.html
+++ b/website/src/overview.html
@@ -84,8 +84,9 @@ layout: main.hbs
 		<li><a href="../meetings/2017-10-20-weekly-meeting/">20.10.2017 - Advisor Meeting Week 5</a></li>
         <li><a href="../meetings/2017-11-09-weekly-meeting/">09.11.2017 - Advisor Meeting Week 8</a></li>
         <li><a href="../meetings/2017-11-21-weekly-meeting/">21.11.2017 - Advisor Meeting Week 10</a></li>
-                <li><i><a href="../meetings/_template-meeting-minutes/">Template</a></i></li>
-            </ul>
+        <li><a href="../meetings/2017-XX-XX-weekly-meeting/">XX.XX.2017 - Advisor Meeting Week XX</a></li>
+        <li><i><a href="../meetings/_template-meeting-minutes/">Template</a></i></li>
+        </ul>
         </div>
     </div>
     <div class="column col-6 col-md-12">
