Add organisational documents section

--- a/website/src/overview.html
+++ b/website/src/overview.html
@@ -117,12 +117,13 @@ layout: main.hbs
         <div class="card">
             <div class="card-header">
                 <div class="card-title">
-                    💬 Presentations
+                    📄 Organisational Documents
                 </div>
             </div>
             <ul>
-                <li><a href="../presentations/interim/">Interim Presentation</a></li>
-                <li><a href="../presentations/final/">Final Presentation</a></li>
+                <li><a href="../documents/usage-rights.pdf">Usage Rights Agreement</a></li>
+                <li><a href="../documents/signed-task-description.pdf">Signed Task Description</a></li>
+                <li><a href="../documents/poster.pdf">Poster</a></li>
             </ul>
         </div>
     </div>
